[fix/#29]-meds-dto